--- a/src/sass/box.sass
+++ b/src/sass/box.sass
@@ -7,25 +7,116 @@ html
 
 body 
 	font-family: "PT Sans", sans-serif
- 
-.landing 
-	min-width: 0
-	overflow: hidden
 	
-	.container
-		max-width: 1070px
-		width: 100%
-		padding-left: 20px
-		padding-right: 20px
-		margin-left: auto
-		font-size: inherit
-		margin-right: auto
+a
+	text-decoration: none
+.box_bg
+	background: rgba(38, 169, 224, 0.05)
+
+.box__container
+	max-width: 1070px
+	width: 100%
+	padding-left: 20px
+	padding-right: 20px
+	margin-left: auto
+	font-size: inherit
+	margin-right: auto
 
 .blue 
 	color: #26A9E0
-.box__header 
-	background: #fefefe
 
-.box__column-left 
-	width: 620px
+.box__title
+	font-weight: bold
+	font-size: 48px
+	text-align: left
+
+.box__text
+	font-size: 24px
+	line-height: 26px
+	text-align: left
+	margin-bottom: 15px;
+
+.box__text_accent
+	font-weight: bold
+.box__text_gray
+	color: rgba(0, 0, 0, 0.3)
+	font-size: 16px
+	
+.box__content
+	display: flex
+	display: inline-flex
+	align-items: center
+.box__button
+	border-radius: 8px 
+	background: #74489D
+	display: flex
+	justify-content: center
+	align-items: center
+.box__button_text
+	color: #FFFFFF 
+	font-size: 24px
+	line-height: 28px
+	text-align: center
+.box__header 
+	margin-top: 100px
+	
+	.box__content_left 
+		width: 620px
+		
+		.box__title
+			width: 560px
+			font-size: 72px
+			line-height: 73px
+			margin-bottom: 40px
+		.box__text
+			padding-right: 10px
+			margin-bottom: 85px
+		
+	.box__content_right 
+			
+		.box__image
+			position: absolute
+			top: -250px
+
+	.box__button
+		width: 250px
+		height: 80px
+		margin-bottom: 320px
+
+.box__first-step
+	
+	.box__content_left
+		position: relative
+		left: -45px
+		margin: 70px 185px 70px 0
+		
+	.box__content_right
+		width: 600px 
+		.box__title
+			margin-bottom: 50px
+		.box__text
+			width: 460px
+			
+.box__third-step
+	.box__content_left
+		margin-right: 135px
+	.box__content_right
+		.box__text
+			margin-bottom: 30px
+		.box__image
+			margin-bottom: 25px
+			
+.box__constructor
+	.box__content_left
+		width: 710px
+		.box__title
+			margin-bottom: 40px
+		.box__text
+			margin-bottom: 30px
+	.box__button
+		width: 320px
+		height: 80px 
+		
+
+
 
