--- a/src/css/box.css
+++ b/src/css/box.css
@@ -15,7 +15,7 @@ a {
   background: rgba(38, 169, 224, 0.05); }
 
 .box__container {
-  max-width: 1070px;
+  max-width: 1150px;
   width: 100%;
   padding-left: 20px;
   padding-right: 20px;
@@ -73,38 +73,36 @@ a {
   -webkit-box-align: center;
   -webkit-align-items: center;
       -ms-flex-align: center;
-          align-items: center; }
-
-.box__button_text {
+          align-items: center;
   color: #FFFFFF;
   font-size: 24px;
   line-height: 28px;
   text-align: center; }
 
-.box__header {
-  margin-top: 100px; }
-  .box__header .box__content_left {
-    width: 620px; }
-    .box__header .box__content_left .box__title {
-      width: 560px;
-      font-size: 72px;
-      line-height: 73px;
-      margin-bottom: 40px; }
-    .box__header .box__content_left .box__text {
-      padding-right: 10px;
-      margin-bottom: 85px; }
-  .box__header .box__content_right .box__image {
-    position: absolute;
-    top: -250px; }
-  .box__header .box__button {
-    width: 250px;
-    height: 80px;
-    margin-bottom: 320px; }
+.box__header .box__content_left {
+  width: 620px;
+  margin: 220px 70px 0 0; }
+  .box__header .box__content_left .box__title {
+    width: 560px;
+    font-size: 72px;
+    line-height: 73px;
+    margin-bottom: 40px; }
+  .box__header .box__content_left .box__text {
+    padding-right: 10px;
+    margin-bottom: 85px; }
+
+.box__header .box__button {
+  width: 250px;
+  height: 80px;
+  margin-bottom: 320px; }
+
+.box__first-step .box__content {
+  margin: 70px 0; }
 
 .box__first-step .box__content_left {
   position: relative;
   left: -45px;
-  margin: 70px 185px 70px 0; }
+  margin-right: 185px; }
 
 .box__first-step .box__content_right {
   width: 600px; }
@@ -113,14 +111,30 @@ a {
   .box__first-step .box__content_right .box__text {
     width: 460px; }
 
+.box__second-step .box__content {
+  margin: 215px 0 240px; }
+
+.box__second-step .box__content_left {
+  width: 460px;
+  margin-right: 80px; }
+
+.box__second-step .box__content_right .box__image {
+  position: absolute;
+  top: 1670px;
+  z-index: -1; }
+
 .box__third-step .box__content_left {
   margin-right: 135px; }
 
 .box__third-step .box__content_right .box__text {
-  margin-bottom: 30px; }
+  margin-bottom: 30px;
+  width: 500px; }
 
 .box__third-step .box__content_right .box__image {
   margin-bottom: 25px; }
+
+.box__constructor .box__content {
+  margin: 140px 0; }
 
 .box__constructor .box__content_left {
   width: 710px; }
@@ -131,4 +145,18 @@ a {
 
 .box__constructor .box__button {
   width: 320px;
-  height: 80px; }
+  height: 80px;
+  margin-right: 20px; }
+
+.box__constructor .box__link {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center; }
+
+.box__constructor .box__text_gray {
+  text-decoration: underline; }
