--- a/src/sass/box.sass
+++ b/src/sass/box.sass
@@ -14,7 +14,7 @@ a
 	background: rgba(38, 169, 224, 0.05)
 
 .box__container
-	max-width: 1070px
+	max-width: 1150px
 	width: 100%
 	padding-left: 20px
 	padding-right: 20px
@@ -38,6 +38,7 @@ a
 
 .box__text_accent
 	font-weight: bold
+	
 .box__text_gray
 	color: rgba(0, 0, 0, 0.3)
 	font-size: 16px
@@ -46,23 +47,23 @@ a
 	display: flex
 	display: inline-flex
 	align-items: center
+	
 .box__button
 	border-radius: 8px 
 	background: #74489D
 	display: flex
 	justify-content: center
 	align-items: center
-.box__button_text
 	color: #FFFFFF 
 	font-size: 24px
 	line-height: 28px
 	text-align: center
+
 .box__header 
-	margin-top: 100px
 	
 	.box__content_left 
 		width: 620px
-		
+		margin: 220px 70px 0 0;
 		.box__title
 			width: 560px
 			font-size: 72px
@@ -75,8 +76,7 @@ a
 	.box__content_right 
 			
 		.box__image
-			position: absolute
-			top: -250px
+			
 
 	.box__button
 		width: 250px
@@ -84,11 +84,12 @@ a
 		margin-bottom: 320px
 
 .box__first-step
-	
+	.box__content
+		margin: 70px 0
 	.box__content_left
 		position: relative
 		left: -45px
-		margin: 70px 185px 70px 0
+		margin-right: 185px
 		
 	.box__content_right
 		width: 600px 
@@ -97,16 +98,34 @@ a
 		.box__text
 			width: 460px
 			
+.box__second-step
+	.box__content
+		margin: 215px 0 240px
+	.box__content_left
+		width: 460px
+		margin-right: 80px
+		
+	.box__content_right
+		.box__image
+			position: absolute
+			top: 1670px
+			z-index: -1
+			
+
 .box__third-step
+	
 	.box__content_left
 		margin-right: 135px
 	.box__content_right
 		.box__text
 			margin-bottom: 30px
+			width: 500px
 		.box__image
 			margin-bottom: 25px
 			
 .box__constructor
+	.box__content
+		margin: 140px 0
 	.box__content_left
 		width: 710px
 		.box__title
@@ -115,7 +134,14 @@ a
 			margin-bottom: 30px
 	.box__button
 		width: 320px
-		height: 80px 
+		height: 80px
+		margin-right: 20px 
+	.box__link
+		display: flex
+		align-items: center
+	.box__text_gray
+		text-decoration: underline
+	
 		
 
 
