--- a/src/css/box.css
+++ b/src/css/box.css
@@ -14,6 +14,56 @@ a {
 .box_bg {
   background: rgba(38, 169, 224, 0.05); }
 
+.box__circles {
+  position: relative; }
+
+.box__circle-1 {
+  position: absolute;
+  top: 375px; }
+
+.box__circle-2 {
+  position: absolute;
+  top: -330px;
+  left: -70px; }
+
+.box__circle-3 {
+  position: absolute;
+  top: 430px;
+  right: 35px; }
+
+.box__circle-4 {
+  position: absolute;
+  top: 325px; }
+
+.box__circle-5 {
+  position: absolute;
+  top: -350px;
+  right: -730px; }
+
+.box__circle-6 {
+  position: absolute;
+  top: 250px; }
+
+.box__circle-7 {
+  position: absolute;
+  top: 95px;
+  right: 0; }
+
+.box__circle-8 {
+  position: absolute;
+  top: 730px;
+  right: 0; }
+
+.box__circle-9 {
+  position: absolute;
+  top: 75px;
+  right: 0; }
+
+.box__circle-10 {
+  position: absolute;
+  top: 525px;
+  right: 150px; }
+
 .box__container {
   max-width: 1150px;
   width: 100%;
@@ -79,9 +129,13 @@ a {
   line-height: 28px;
   text-align: center; }
 
+.box__header .box__content {
+  margin: 140px 0 320px; }
+
 .box__header .box__content_left {
   width: 620px;
-  margin: 220px 70px 0 0; }
+  margin-right: 70px;
+  position: relative; }
   .box__header .box__content_left .box__title {
     width: 560px;
     font-size: 72px;
@@ -91,10 +145,16 @@ a {
     padding-right: 10px;
     margin-bottom: 85px; }
 
+.box__header .box__content_right {
+  position: relative; }
+  .box__header .box__content_right .box__image {
+    position: absolute;
+    top: -600px;
+    z-index: -1; }
+
 .box__header .box__button {
   width: 250px;
-  height: 80px;
-  margin-bottom: 320px; }
+  height: 80px; }
 
 .box__first-step .box__content {
   margin: 70px 0; }
@@ -118,10 +178,12 @@ a {
   width: 460px;
   margin-right: 80px; }
 
-.box__second-step .box__content_right .box__image {
-  position: absolute;
-  top: 1670px;
-  z-index: -1; }
+.box__second-step .box__content_right {
+  position: relative; }
+  .box__second-step .box__content_right .box__image {
+    position: absolute;
+    top: -450px;
+    z-index: -1; }
 
 .box__third-step .box__content_left {
   margin-right: 135px; }
@@ -133,30 +195,28 @@ a {
 .box__third-step .box__content_right .box__image {
   margin-bottom: 25px; }
 
-.box__constructor .box__content {
-  margin: 140px 0; }
-
-.box__constructor .box__content_left {
-  width: 710px; }
-  .box__constructor .box__content_left .box__title {
-    margin-bottom: 40px; }
-  .box__constructor .box__content_left .box__text {
-    margin-bottom: 30px; }
-
-.box__constructor .box__button {
-  width: 320px;
-  height: 80px;
-  margin-right: 20px; }
-
-.box__constructor .box__link {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center; }
-
-.box__constructor .box__text_gray {
-  text-decoration: underline; }
+.box__constructor {
+  position: relative; }
+  .box__constructor .box__content {
+    margin: 140px 0; }
+  .box__constructor .box__content_left {
+    width: 710px; }
+    .box__constructor .box__content_left .box__title {
+      margin-bottom: 40px; }
+    .box__constructor .box__content_left .box__text {
+      margin-bottom: 30px; }
+  .box__constructor .box__button {
+    width: 320px;
+    height: 80px;
+    margin-right: 20px; }
+  .box__constructor .box__link {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center; }
+  .box__constructor .box__text_gray {
+    text-decoration: underline; }
