--- a/src/sass/box.sass
+++ b/src/sass/box.sass
@@ -51,10 +51,10 @@ a
 	right: 0
 .box__circle-10
 	position: absolute
-	top: 525px
+	top: 560px
 	right: 150px
 .box__container
-	max-width: 1150px
+	max-width: 1260px
 	width: 100%
 	padding-left: 20px
 	padding-right: 20px
@@ -106,21 +106,21 @@ a
 		width: 620px
 		margin-right: 70px
 		position: relative 
-		.box__title
-			width: 560px
-			font-size: 72px
-			line-height: 73px
-			margin-bottom: 40px
-		.box__text
-			padding-right: 10px
-			margin-bottom: 85px
+	.box__title
+		width: 560px
+		font-size: 72px
+		line-height: 73px
+		margin-bottom: 40px
+	.box__text
+		padding-right: 10px
+		margin-bottom: 85px
 		
 	.box__content_right 
 		position: relative 
-		.box__image
-			position: absolute
-			top: -600px
-			z-index: -1 
+	.box__image
+		position: absolute
+		top: -600px
+		z-index: -1 
 
 	.box__button
 		width: 250px
@@ -136,10 +136,10 @@ a
 		
 	.box__content_right
 		width: 600px 
-		.box__title
-			margin-bottom: 50px
-		.box__text
-			width: 460px
+	.box__title
+		margin-bottom: 50px
+	.box__text
+		width: 460px
 			
 .box__second-step
 	.box__content
@@ -151,10 +151,10 @@ a
 	.box__content_right
 		position: relative
 		
-		.box__image
-			position: absolute
-			top: -450px
-			z-index: -1
+	.box__image
+		position: absolute
+		top: -450px
+		z-index: -1
 			
 
 .box__third-step
@@ -162,11 +162,11 @@ a
 	.box__content_left
 		margin-right: 135px
 	.box__content_right
-		.box__text
-			margin-bottom: 30px
-			width: 500px
-		.box__image
-			margin-bottom: 25px
+	.box__text
+		margin-bottom: 30px
+		width: 500px
+	.box__image
+		margin-bottom: 25px
 			
 .box__constructor
 	position: relative
@@ -174,10 +174,10 @@ a
 		margin: 140px 0
 	.box__content_left
 		width: 710px
-		.box__title
-			margin-bottom: 40px
-		.box__text
-			margin-bottom: 30px
+	.box__title
+		margin-bottom: 40px
+	.box__text
+		margin-bottom: 30px
 	.box__button
 		width: 320px
 		height: 80px
@@ -187,8 +187,17 @@ a
 		align-items: center
 	.box__text_gray
 		text-decoration: underline
-	
 		
+@media(max-width: 1850px)
+	.box__circle-8
+		display: none
+	.box__circle-7 
+  		display: none
+@media(max-width: 1550px)
+  	.box__circle-1
+  		display: none
+  	.box__circle-9
+  		display: none		
 
 
 
