--- a/src/css/box.css
+++ b/src/css/box.css
@@ -127,7 +127,9 @@ a {
   color: #FFFFFF;
   font-size: 24px;
   line-height: 28px;
-  text-align: center; }
+  text-align: center;
+  -webkit-box-shadow: 2px 10px 66px -9px #74489D;
+          box-shadow: 2px 10px 66px -9px #74489D; }
 
 .box__header .box__content {
   margin: 140px 0 320px; }
