--- a/src/sass/box.sass
+++ b/src/sass/box.sass
@@ -98,6 +98,7 @@ a
 	font-size: 24px
 	line-height: 28px
 	text-align: center
+	box-shadow: 2px 10px 66px -9px #74489D
 
 .box__header 
 	.box__content
