--- a/src/sass/box.sass
+++ b/src/sass/box.sass
@@ -51,7 +51,7 @@ a
 	right: 0
 .box__circle-10
 	position: absolute
-	top: 670px
+	top: 700px
 	right: 150px
 .box__container
 	max-width: 1260px
@@ -74,7 +74,7 @@ a
 	font-size: 24px
 	line-height: 26px
 	text-align: left
-	margin-bottom: 15px;
+	margin-bottom: 40px;
 
 .box__text_accent
 	font-weight: bold
@@ -138,7 +138,7 @@ a
 	.box__content_right
 		width: 600px 
 	.box__title
-		margin-bottom: 50px
+		margin-bottom: 40px
 	.box__text
 		width: 460px
 			
@@ -164,29 +164,28 @@ a
 		margin-right: 135px
 	.box__content_right
 	.box__text
-		margin-bottom: 30px
 		width: 500px
 	.box__image
-		margin-bottom: 25px
+		margin-bottom: 40px
 			
 .box__constructor
 	position: relative
 	.box__content
 		margin: 140px 0
 	.box__content_left
-		width: 610px
+		width: 525px
 	.box__title
 		margin-bottom: 40px
-	.box__text
-		margin-bottom: 30px
 	.box__button
 		width: 320px
 		height: 80px
-		margin-right: 20px 
+		margin-right: 30px 
 	.box__link
 		display: flex
 		align-items: center
 	.box__text_gray
+		line-height: 19px
+	a.box__text_gray
 		text-decoration: underline
 		
 @media(max-width: 1850px)
