changed image for consctructor

--- a/src/sass/box.sass
+++ b/src/sass/box.sass
@@ -51,7 +51,7 @@ a
 	right: 0
 .box__circle-10
 	position: absolute
-	top: 700px
+	top: 740px
 	right: 150px
 .box__container
 	max-width: 1260px
@@ -115,7 +115,9 @@ a
 	.box__text
 		padding-right: 10px
 		margin-bottom: 85px
-		
+	.box__text_gray
+		font-size: 24px
+		margin-bottom: 40px
 	.box__content_right 
 		position: relative 
 	.box__image
@@ -171,9 +173,10 @@ a
 .box__constructor
 	position: relative
 	.box__content
-		margin: 140px 0
+		margin: 90px 0
 	.box__content_left
-		width: 525px
+		width: 500px
+		margin-right: 30px
 	.box__title
 		margin-bottom: 40px
 	.box__button
