--- a/src/css/box.css
+++ b/src/css/box.css
@@ -61,7 +61,7 @@ a {
 
 .box__circle-10 {
   position: absolute;
-  top: 700px;
+  top: 740px;
   right: 150px; }
 
 .box__container {
@@ -149,6 +149,10 @@ a {
   padding-right: 10px;
   margin-bottom: 85px; }
 
+.box__header .box__text_gray {
+  font-size: 24px;
+  margin-bottom: 40px; }
+
 .box__header .box__content_right {
   position: relative; }
 
@@ -205,9 +209,10 @@ a {
 .box__constructor {
   position: relative; }
   .box__constructor .box__content {
-    margin: 140px 0; }
+    margin: 90px 0; }
   .box__constructor .box__content_left {
-    width: 525px; }
+    width: 500px;
+    margin-right: 30px; }
   .box__constructor .box__title {
     margin-bottom: 40px; }
   .box__constructor .box__button {
