--- a/src/sass/box.sass
+++ b/src/sass/box.sass
@@ -20,8 +20,8 @@ a
 	top: 375px
 .box__circle-2
 	position: absolute
-	top: -330px
-	left: -70px
+	top: 60px
+	left: 100px
 .box__circle-3
 	position: absolute
 	top: 430px
@@ -47,12 +47,16 @@ a
 	right: 0
 .box__circle-9
 	position: absolute
-	top: 75px
+	top: 140px
 	right: 0
 .box__circle-10
 	position: absolute
 	top: 740px
 	right: 150px
+.box__circle-11
+	position: absolute
+	top: -70px
+	left: 0
 .box__container
 	max-width: 1260px
 	width: 100%
@@ -131,11 +135,9 @@ a
 
 .box__first-step
 	.box__content
-		margin: 70px 0
+		margin: 70px 0 0
 	.box__content_left
-		position: relative
-		left: -45px
-		margin-right: 185px
+		margin-right: 100px
 		
 	.box__content_right
 		width: 600px 
@@ -161,9 +163,9 @@ a
 			
 
 .box__third-step
-	
+	position: relative
 	.box__content_left
-		margin-right: 135px
+		margin-right: 155px
 	.box__content_right
 	.box__text
 		width: 500px
@@ -176,20 +178,23 @@ a
 		margin: 90px 0
 	.box__content_left
 		width: 500px
-		margin-right: 30px
+		margin-right: 135px
 	.box__title
 		margin-bottom: 40px
-	.box__button
-		width: 320px
-		height: 80px
-		margin-right: 30px 
+	.box__image
+		margin-bottom: 40px 
+		display: flex
+		align-items: center
+		a
+			text-decoration: underline
+			width: 220px
+		img
+			margin-right: 20px
 	.box__link
 		display: flex
 		align-items: center
 	.box__text_gray
 		line-height: 19px
-	a.box__text_gray
-		text-decoration: underline
 		
 @media(max-width: 1850px)
 	.box__circle-8
@@ -199,8 +204,12 @@ a
 @media(max-width: 1550px)
   	.box__circle-1
   		display: none
+  	.box__circle-2
+  		display: none
   	.box__circle-9
-  		display: none		
+  		display: none	
+  	.box__circle-11
+  		display: none	
 
 
 
