--- a/src/css/box.css
+++ b/src/css/box.css
@@ -26,11 +26,6 @@ a {
   top: 60px;
   left: 100px; }
 
-.box__circle-3 {
-  position: absolute;
-  top: 430px;
-  right: 35px; }
-
 .box__circle-4 {
   position: absolute;
   top: 325px; }
@@ -61,7 +56,7 @@ a {
 
 .box__circle-10 {
   position: absolute;
-  top: 740px;
+  top: 585px;
   right: 150px; }
 
 .box__circle-11 {
@@ -110,12 +105,12 @@ a {
   display: inline-flex;
   -webkit-box-align: center;
   -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center; }
+  -ms-flex-align: center;
+  align-items: center; }
 
 .box__button {
   -webkit-border-radius: 8px;
-          border-radius: 8px;
+  border-radius: 8px;
   background: #74489D;
   display: -webkit-box;
   display: -webkit-flex;
@@ -123,50 +118,117 @@ a {
   display: flex;
   -webkit-box-pack: center;
   -webkit-justify-content: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   -webkit-box-align: center;
   -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   color: #FFFFFF;
   font-size: 24px;
   line-height: 28px;
   text-align: center;
   -webkit-box-shadow: 2px 10px 66px -9px #74489D;
-          box-shadow: 2px 10px 66px -9px #74489D; }
+  box-shadow: 2px 10px 66px -9px #74489D; }
+  .box__button:hover {
+    opacity: 0.9; }
 
-.box__header .box__content {
+.box__header {
+  background: #26A9E0;
+  color: #ffffff; }
+  .box__header .box__container {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    height: 100%; }
+  .box__header .box__logo {
+    margin: 20px 40px 20px 0; }
+  .box__header .box__menu {
+    list-style: none;
+    border: none;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: end;
+    -webkit-justify-content: flex-end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+    margin-right: 20px; }
+  .box__header .box__menu_item {
+    height: 100%;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin-right: 20px; }
+  .box__header .box__menu a {
+    color: inherit;
+    opacity: 0.6;
+    text-decoration: none;
+    cursor: pointer;
+    height: 100%;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center; }
+  .box__header .box__menu a:hover {
+    opacity: 1; }
+  .box__header .active a {
+    opacity: 1; }
+
+.box__prime .box__content {
   margin: 140px 0 320px; }
 
-.box__header .box__content_left {
+.box__prime .box__content_left {
   width: 620px;
   margin-right: 70px;
   position: relative; }
 
-.box__header .box__title {
+.box__prime .box__title {
   width: 560px;
   font-size: 72px;
   line-height: 73px;
   margin-bottom: 40px; }
 
-.box__header .box__text {
+.box__prime .box__text {
   padding-right: 10px;
   margin-bottom: 85px; }
 
-.box__header .box__text_gray {
+.box__prime .box__text_gray {
   font-size: 24px;
   margin-bottom: 40px; }
 
-.box__header .box__content_right {
+.box__prime .box__content_right {
   position: relative; }
 
-.box__header .box__image {
+.box__prime .box__image {
   position: absolute;
   top: -600px;
   z-index: -1; }
 
-.box__header .box__button {
+.box__prime .box__button {
   width: 250px;
   height: 80px; }
 
@@ -226,11 +288,13 @@ a {
     display: flex;
     -webkit-box-align: center;
     -webkit-align-items: center;
-        -ms-flex-align: center;
-            align-items: center; }
+    -ms-flex-align: center;
+    align-items: center; }
     .box__constructor .box__image a {
       text-decoration: underline;
       width: 220px; }
+      .box__constructor .box__image a:hover {
+        text-decoration: none; }
     .box__constructor .box__image img {
       margin-right: 20px; }
   .box__constructor .box__link {
@@ -240,23 +304,15 @@ a {
     display: flex;
     -webkit-box-align: center;
     -webkit-align-items: center;
-        -ms-flex-align: center;
-            align-items: center; }
+    -ms-flex-align: center;
+    align-items: center; }
   .box__constructor .box__text_gray {
     line-height: 19px; }
 
 @media (max-width: 1850px) {
-  .box__circle-8 {
-    display: none; }
-  .box__circle-7 {
+  .box__circle-8, .box__circle-7 {
     display: none; } }
 
 @media (max-width: 1550px) {
-  .box__circle-1 {
-    display: none; }
-  .box__circle-2 {
-    display: none; }
-  .box__circle-9 {
-    display: none; }
-  .box__circle-11 {
+  .box__circle-1, .box__circle-2, .box__circle-9, .box__circle-11 {
     display: none; } }
