--- a/src/sass/box.sass
+++ b/src/sass/box.sass
@@ -1,215 +1,276 @@
 * 
-	margin: 0
-	padding: 0
+  margin: 0
+  padding: 0
 
-html 
-	font-size: 18px
+html
+  font-size: 18px
 
-body 
-	font-family: "PT Sans", sans-serif
-	
+body
+  font-family: "PT Sans", sans-serif
+
 a
-	text-decoration: none
-.box_bg
-	background: rgba(38, 169, 224, 0.05)
-	
-.box__circles
-	position: relative
-.box__circle-1
-	position: absolute
-	top: 375px
-.box__circle-2
-	position: absolute
-	top: 60px
-	left: 100px
-.box__circle-3
-	position: absolute
-	top: 430px
-	right: 35px
-.box__circle-4
-	position: absolute
-	top: 325px
-	
-.box__circle-5
-	position: absolute
-	top: -350px
-	right: -730px
-.box__circle-6
-	position: absolute
-	top: 250px
-.box__circle-7
-	position: absolute
-	top: 95px
-	right: 0
-.box__circle-8
-	position: absolute
-	top: 730px
-	right: 0
-.box__circle-9
-	position: absolute
-	top: 140px
-	right: 0
-.box__circle-10
-	position: absolute
-	top: 585px
-	right: 150px
-.box__circle-11
-	position: absolute
-	top: -70px
-	left: 0
-.box__container
-	max-width: 1260px
-	width: 100%
-	padding-left: 20px
-	padding-right: 20px
-	margin-left: auto
-	font-size: inherit
-	margin-right: auto
+  text-decoration: none
 
-.blue 
-	color: #26A9E0
+.box_bg
+  background: rgba(38, 169, 224, 0.05)
+
+.box__circles
+  position: relative
+
+.box__circle-1
+  position: absolute
+  top: 375px
+
+.box__circle-2
+  position: absolute
+  top: 60px
+  left: 100px
+
+.box__circle-4
+  position: absolute
+  top: 325px
+
+.box__circle-5
+  position: absolute
+  top: -350px
+  right: -730px
+
+.box__circle-6
+  position: absolute
+  top: 250px
+
+.box__circle-7
+  position: absolute
+  top: 95px
+  right: 0
+
+.box__circle-8
+  position: absolute
+  top: 730px
+  right: 0
+
+.box__circle-9
+  position: absolute
+  top: 140px
+  right: 0
+
+.box__circle-10
+  position: absolute
+  top: 585px
+  right: 150px
+
+.box__circle-11
+  position: absolute
+  top: -70px
+  left: 0
+
+.box__container
+  max-width: 1260px
+  width: 100%
+  padding-left: 20px
+  padding-right: 20px
+  margin-left: auto
+  font-size: inherit
+  margin-right: auto
+
+.blue
+  color: #26A9E0
 
 .box__title
-	font-weight: bold
-	font-size: 48px
-	text-align: left
+  font-weight: bold
+  font-size: 48px
+  text-align: left
 
 .box__text
-	font-size: 24px
-	line-height: 26px
-	text-align: left
-	margin-bottom: 40px;
+  font-size: 24px
+  line-height: 26px
+  text-align: left
+  margin-bottom: 40px
 
 .box__text_accent
-	font-weight: bold
-	
+  font-weight: bold
+
 .box__text_gray
-	color: rgba(0, 0, 0, 0.3)
-	font-size: 16px
-	
+  color: rgba(0, 0, 0, 0.3)
+  font-size: 16px
+
 .box__content
-	display: flex
-	display: inline-flex
-	align-items: center
-	
+  display: -webkit-box
+  display: -webkit-flex
+  display: -ms-flexbox
+  display: flex
+  display: -webkit-inline-box
+  display: -webkit-inline-flex
+  display: -ms-inline-flexbox
+  display: inline-flex
+  -webkit-box-align: center
+  -webkit-align-items: center
+  -ms-flex-align: center
+  align-items: center
+
 .box__button
-	border-radius: 8px 
-	background: #74489D
-	display: flex
-	justify-content: center
-	align-items: center
-	color: #FFFFFF 
-	font-size: 24px
-	line-height: 28px
-	text-align: center
-	box-shadow: 2px 10px 66px -9px #74489D
-
-.box__header 
-	.box__content
-		margin: 140px 0 320px
-	.box__content_left 
-		width: 620px
-		margin-right: 70px
-		position: relative 
-	.box__title
-		width: 560px
-		font-size: 72px
-		line-height: 73px
-		margin-bottom: 40px
-	.box__text
-		padding-right: 10px
-		margin-bottom: 85px
-	.box__text_gray
-		font-size: 24px
-		margin-bottom: 40px
-	.box__content_right 
-		position: relative 
-	.box__image
-		position: absolute
-		top: -600px
-		z-index: -1 
-
-	.box__button
-		width: 250px
-		height: 80px
+  -webkit-border-radius: 8px
+  border-radius: 8px
+  background: #74489D
+  display: -webkit-box
+  display: -webkit-flex
+  display: -ms-flexbox
+  display: flex
+  -webkit-box-pack: center
+  -webkit-justify-content: center
+  -ms-flex-pack: center
+  justify-content: center
+  -webkit-box-align: center
+  -webkit-align-items: center
+  -ms-flex-align: center
+  align-items: center
+  color: #FFFFFF
+  font-size: 24px
+  line-height: 28px
+  text-align: center
+  -webkit-box-shadow: 2px 10px 66px -9px #74489D
+  box-shadow: 2px 10px 66px -9px #74489D
+  &:hover
+    opacity: 0.9
+.box__header
+  background: #26A9E0
+  color: #ffffff
+  .box__container
+    display: flex
+    justify-content: space-between
+    align-items: center
+    height: 100%
+  .box__logo
+    margin: 20px 40px 20px 0
+  .box__menu
+    list-style: none
+    border: none
+    display: flex
+    justify-content: flex-end
+    margin-right: 20px
+  .box__menu_item
+    height: 100%
+    display: flex
+    align-items: center
+    margin-right: 20px
+  .box__menu a
+    color: inherit
+    opacity: 0.6 
+    text-decoration: none
+    cursor: pointer
+    height: 100%
+    display: flex
+    justify-content: center
+    align-items: center 
+  .box__menu a:hover
+    opacity: 1
+  .active a
+    opacity: 1
+    
+.box__prime
+  .box__content
+    margin: 140px 0 320px
+  .box__content_left
+    width: 620px
+    margin-right: 70px
+    position: relative
+  .box__title
+    width: 560px
+    font-size: 72px
+    line-height: 73px
+    margin-bottom: 40px
+  .box__text
+    padding-right: 10px
+    margin-bottom: 85px
+  .box__text_gray
+    font-size: 24px
+    margin-bottom: 40px
+  .box__content_right
+    position: relative
+  .box__image
+    position: absolute
+    top: -600px
+    z-index: -1
+  .box__button
+    width: 250px
+    height: 80px
 
 .box__first-step
-	.box__content
-		margin: 70px 0 0
-	.box__content_left
-		margin-right: 100px
-		
-	.box__content_right
-		width: 600px 
-	.box__title
-		margin-bottom: 40px
-	.box__text
-		width: 460px
-			
+  .box__content
+    margin: 70px 0 0
+  .box__content_left
+    margin-right: 100px
+  .box__content_right
+    width: 600px
+  .box__title
+    margin-bottom: 40px
+  .box__text
+    width: 460px
+
 .box__second-step
-	.box__content
-		margin: 215px 0 240px
-	.box__content_left
-		width: 460px
-		margin-right: 80px
-		
-	.box__content_right
-		position: relative
-		
-	.box__image
-		position: absolute
-		top: -450px
-		z-index: -1
-			
+  .box__content
+    margin: 215px 0 240px
+  .box__content_left
+    width: 460px
+    margin-right: 80px
+  .box__content_right
+    position: relative
+  .box__image
+    position: absolute
+    top: -450px
+    z-index: -1
 
 .box__third-step
-	position: relative
-	.box__content_left
-		margin-right: 155px
-	.box__content_right
-	.box__text
-		width: 500px
-	.box__image
-		margin-bottom: 40px
-			
+  position: relative
+  .box__content_left
+    margin-right: 155px
+  .box__text
+    width: 500px
+  .box__image
+    margin-bottom: 40px
+
 .box__constructor
-	position: relative
-	.box__content
-		margin: 90px 0
-	.box__content_left
-		width: 500px
-		margin-right: 135px
-	.box__title
-		margin-bottom: 40px
-	.box__image
-		margin-bottom: 40px 
-		display: flex
-		align-items: center
-		a
-			text-decoration: underline
-			width: 220px
-		img
-			margin-right: 20px
-	.box__link
-		display: flex
-		align-items: center
-	.box__text_gray
-		line-height: 19px
-		
-@media(max-width: 1850px)
-	.box__circle-8
-		display: none
-	.box__circle-7 
-  		display: none
-@media(max-width: 1550px)
-  	.box__circle-1
-  		display: none
-  	.box__circle-2
-  		display: none
-  	.box__circle-9
-  		display: none	
-  	.box__circle-11
-  		display: none	
+  position: relative
+  .box__content
+    margin: 90px 0
+  .box__content_left
+    width: 500px
+    margin-right: 135px
+  .box__title
+    margin-bottom: 40px
+  .box__image
+    margin-bottom: 40px
+    display: -webkit-box
+    display: -webkit-flex
+    display: -ms-flexbox
+    display: flex
+    -webkit-box-align: center
+    -webkit-align-items: center
+    -ms-flex-align: center
+    align-items: center
+    a
+      text-decoration: underline
+      width: 220px
+      &:hover
+        text-decoration: none
+    img
+      margin-right: 20px
+  .box__link
+    display: -webkit-box
+    display: -webkit-flex
+    display: -ms-flexbox
+    display: flex
+    -webkit-box-align: center
+    -webkit-align-items: center
+    -ms-flex-align: center
+    align-items: center
+  .box__text_gray
+    line-height: 19px
 
+@media (max-width: 1850px)
+  .box__circle-8, .box__circle-7
+    display: none
 
-
+@media (max-width: 1550px)
+  .box__circle-1, .box__circle-2, .box__circle-9, .box__circle-11
+    display: none
