--- a/src/sass/box.sass
+++ b/src/sass/box.sass
@@ -14,57 +14,57 @@ a
 .box_bg
   background: rgba(38, 169, 224, 0.05)
 
-.box__circles
+.circles
   position: relative
 
-.box__circle-1
+.circle-1
   position: absolute
   top: 375px
 
-.box__circle-2
+.circle-2
   position: absolute
   top: 60px
   left: 100px
 
-.box__circle-4
+.circle-4
   position: absolute
   top: 325px
 
-.box__circle-5
+.circle-5
   position: absolute
   top: -350px
   right: -730px
 
-.box__circle-6
+.circle-6
   position: absolute
   top: 250px
 
-.box__circle-7
+.circle-7
   position: absolute
   top: 95px
   right: 0
 
-.box__circle-8
+.circle-8
   position: absolute
   top: 730px
   right: 0
 
-.box__circle-9
+.circle-9
   position: absolute
   top: 140px
   right: 0
 
-.box__circle-10
+.circle-10
   position: absolute
   top: 585px
   right: 150px
 
-.box__circle-11
+.circle-11
   position: absolute
   top: -70px
   left: 0
 
-.box__container
+.container
   max-width: 1260px
   width: 100%
   padding-left: 20px
@@ -76,25 +76,25 @@ a
 .blue
   color: #26A9E0
 
-.box__title
+.title
   font-weight: bold
   font-size: 48px
   text-align: left
 
-.box__text
+.text
   font-size: 24px
   line-height: 26px
   text-align: left
   margin-bottom: 40px
 
-.box__text_accent
+.text_accent
   font-weight: bold
 
-.box__text_gray
+.text_gray
   color: rgba(0, 0, 0, 0.3)
   font-size: 16px
 
-.box__content
+.content
   display: -webkit-box
   display: -webkit-flex
   display: -ms-flexbox
@@ -108,7 +108,7 @@ a
   -ms-flex-align: center
   align-items: center
 
-.box__button
+.button
   -webkit-border-radius: 8px
   border-radius: 8px
   background: #74489D
@@ -132,28 +132,28 @@ a
   box-shadow: 2px 10px 66px -9px #74489D
   &:hover
     opacity: 0.9
-.box__header
+.header
   background: #26A9E0
   color: #ffffff
-  .box__container
+  .container
     display: flex
     justify-content: space-between
     align-items: center
     height: 100%
-  .box__logo
+  .logo
     margin: 20px 40px 20px 0
-  .box__menu
+  .menu
     list-style: none
     border: none
     display: flex
     justify-content: flex-end
     margin-right: 20px
-  .box__menu_item
+  .menu-item
     height: 100%
     display: flex
     align-items: center
     margin-right: 20px
-  .box__menu a
+  .menu a
     color: inherit
     opacity: 0.6 
     text-decoration: none
@@ -162,83 +162,83 @@ a
     display: flex
     justify-content: center
     align-items: center 
-  .box__menu a:hover
+  .menu a:hover
     opacity: 1
   .active a
     opacity: 1
     
 .box__prime
-  .box__content
+  .content
     margin: 140px 0 320px
-  .box__content_left
+  .content_left
     width: 620px
     margin-right: 70px
     position: relative
-  .box__title
+  .title
     width: 560px
     font-size: 72px
     line-height: 73px
     margin-bottom: 40px
-  .box__text
+  .text
     padding-right: 10px
     margin-bottom: 85px
-  .box__text_gray
+  .text_gray
     font-size: 24px
     margin-bottom: 40px
-  .box__content_right
+  .content_right
     position: relative
-  .box__image
+  .image
     position: absolute
     top: -600px
     z-index: -1
-  .box__button
+  .button
     width: 250px
     height: 80px
 
 .box__first-step
-  .box__content
+  .content
     margin: 70px 0 0
-  .box__content_left
+  .content_left
     margin-right: 100px
-  .box__content_right
+  .content_right
     width: 600px
-  .box__title
+  .title
     margin-bottom: 40px
-  .box__text
+  .text
     width: 460px
 
 .box__second-step
-  .box__content
+  .content
     margin: 215px 0 240px
-  .box__content_left
+  .content_left
     width: 460px
     margin-right: 80px
-  .box__content_right
+  .content_right
     position: relative
-  .box__image
+  .image
     position: absolute
     top: -450px
     z-index: -1
 
 .box__third-step
   position: relative
-  .box__content_left
+  .content_left
     margin-right: 155px
-  .box__text
+  .text
     width: 500px
-  .box__image
+  .image
     margin-bottom: 40px
 
 .box__constructor
   position: relative
-  .box__content
+  .content
     margin: 90px 0
-  .box__content_left
+  .content_left
     width: 500px
     margin-right: 135px
-  .box__title
+  .title
     margin-bottom: 40px
-  .box__image
+  .image
     margin-bottom: 40px
     display: -webkit-box
     display: -webkit-flex
@@ -255,7 +255,7 @@ a
         text-decoration: none
     img
       margin-right: 20px
-  .box__link
+  .link
     display: -webkit-box
     display: -webkit-flex
     display: -ms-flexbox
@@ -264,13 +264,13 @@ a
     -webkit-align-items: center
     -ms-flex-align: center
     align-items: center
-  .box__text_gray
+  .text_gray
     line-height: 19px
 
 @media (max-width: 1850px)
-  .box__circle-8, .box__circle-7
+  .circle-8, .circle-7
     display: none
 
 @media (max-width: 1550px)
-  .box__circle-1, .box__circle-2, .box__circle-9, .box__circle-11
+  .circle-1, .circle-2, .circle-9, .circle-11
     display: none
