--- a/src/ii/sass/box.sass
+++ b/src/ii/sass/box.sass
@@ -19,21 +19,23 @@ a
 
 .circle-1
   position: absolute
-  top: 375px
+  top: 68px
 
 .circle-2
   position: absolute
-  top: 60px
-  left: 100px
+  top: 440px
+  right: 525px
 
 .circle-4
   position: absolute
-  top: 325px
+  top: 165px
+  z-index: 2
 
 .circle-5
   position: absolute
-  top: -350px
-  right: -730px
+  top: 240px
+  right: -795px
+  z-index: 2
 
 .circle-6
   position: absolute
@@ -51,17 +53,16 @@ a
 
 .circle-9
   position: absolute
-  top: 140px
   right: 0
 
 .circle-10
   position: absolute
-  top: 585px
-  right: 150px
+  top: 170px
+  left: 150px
 
 .circle-11
   position: absolute
-  top: -70px
+  top: -360px
   left: 0
 
 .container
@@ -164,10 +165,9 @@ a
     
 .box__prime
   .content
-    margin: 140px 0 320px
+    margin: 140px 0 170px
   .content_left
     width: 620px
-    margin-right: 70px
     position: relative
   .title
     width: 560px
@@ -184,7 +184,7 @@ a
     position: relative
   .image
     position: absolute
-    top: -600px
+    top: -505px
     z-index: -1
   .button
     width: 250px
@@ -197,32 +197,33 @@ a
     margin-right: 100px
   .content_right
     width: 600px
+  .image
+    margin-top: 170px
   .title
     margin-bottom: 40px
   .text
     width: 460px
 
 .box__second-step
+  position: relative
   .content
     margin: 215px 0 240px
   .content_left
     width: 460px
-    margin-right: 80px
+    margin-right: 100px
   .content_right
     position: relative
   .image
     position: absolute
-    top: -450px
+    top: -410px
     z-index: -1
 
 .box__third-step
   position: relative
   .content_left
-    margin-right: 155px
+    margin: 117px 155px 117px 0
   .text
     width: 500px
-  .image
-    margin-bottom: 40px
 
 .box__constructor
   position: relative
