--- a/src/ii/sass/box.sass
+++ b/src/ii/sass/box.sass
@@ -1,6 +1,7 @@
 * 
   margin: 0
   padding: 0
+  border: 0   
 
 html
   font-size: 18px
@@ -11,65 +12,53 @@ body
 a
   text-decoration: none
 
+.box
+  width: 100%
+  min-width: 940px
+  overflow: hidden
+
 .box_bg
   background: rgba(38, 169, 224, 0.05)
 
-.circles
-  position: relative
-
 .circle-1
   position: absolute
-  top: 68px
-
-.circle-2
-  position: absolute
-  top: 440px
-  right: 525px
-
-.circle-4
-  position: absolute
-  top: 165px
-  z-index: 2
-
-.circle-5
-  position: absolute
-  top: 240px
-  right: -795px
-  z-index: 2
+  top: 11%
 
 .circle-6
   position: absolute
-  top: 250px
+  top: 73%
+  right: 10%
+
+.circle-3
+  position: absolute
+  top: 71%
+  z-index: 2
+
+.circle-2
+  position: absolute
+  top: 75%
+  left: 60%
+  z-index: 2
+
+.circle-4
+  position: absolute
+  right: 0
 
 .circle-7
   position: absolute
-  top: 95px
-  right: 0
+  top: 17%
+  left: 10%
 
-.circle-8
+.circle-5
   position: absolute
-  top: 730px
-  right: 0
-
-.circle-9
-  position: absolute
-  right: 0
-
-.circle-10
-  position: absolute
-  top: 170px
-  left: 150px
-
-.circle-11
-  position: absolute
-  top: -360px
+  top: -30%
   left: 0
 
 .container
   max-width: 1260px
   width: 100%
-  padding-left: 20px
-  padding-right: 20px
+  box-sizing: border-box
+  padding: 0 20px
   margin: 0 auto
   font-size: inherit
 
@@ -80,6 +69,7 @@ a
   font-weight: bold
   font-size: 48px
   text-align: left
+  margin-bottom: 40px
 
 .text
   font-size: 24px
@@ -90,9 +80,15 @@ a
 .text_accent
   font-weight: bold
 
-.text_gray
+.text_color
   color: rgba(0, 0, 0, 0.3)
   font-size: 16px
+
+.text_center
+  text-align: center
+
+.text_right
+  text-align: right
 
 .content
   display: -webkit-box
@@ -103,6 +99,17 @@ a
   -webkit-align-items: center
   -ms-flex-align: center
   align-items: center
+.content_left
+  position: relative
+  width: 48%
+.content_right
+  position: relative
+  width: 48%
+.box_bg
+  .content_left
+    margin-right: 100px 
+.image
+  width: 100%
 
 .button
   -webkit-border-radius: 8px
@@ -136,94 +143,67 @@ a
     justify-content: space-between
     align-items: center
     height: 100%
-  .logo
-    margin: 20px 40px 20px 0
-  .menu
-    list-style: none
-    border: none
-    display: flex
-    justify-content: flex-end
-    margin-right: 20px
-  .menu-item
-    height: 100%
-    display: flex
-    align-items: center
-    margin-right: 20px
-  .menu a
-    color: inherit
-    opacity: 0.6 
-    text-decoration: none
-    cursor: pointer
-    height: 100%
-    display: flex
-    justify-content: center
-    align-items: center 
-  .menu a:hover
-    opacity: 1
-  .active a
-    opacity: 1
+.logo
+  margin: 20px 40px 20px 0
+.menu
+  list-style: none
+  border: none
+  display: flex
+  justify-content: flex-end
+.menu-item
+  height: 100%
+  display: flex
+  align-items: center
+  margin-right: 20px
+.menu-item:last-child
+  margin-right: 0
+.menu a
+  color: inherit
+  opacity: 0.6 
+  text-decoration: none
+  cursor: pointer
+  height: 100%
+  display: flex
+  justify-content: center
+  align-items: center 
+.menu a:hover
+  opacity: 1
+.active a
+  opacity: 1
     
 .box__prime
-  .content
-    margin: 140px 0 170px
-  .content_left
-    width: 620px
-    position: relative
   .title
-    width: 560px
     font-size: 72px
     line-height: 73px
-    margin-bottom: 40px
   .text
     padding-right: 10px
     margin-bottom: 85px
-  .text_gray
+  .text_color
     font-size: 24px
     margin-bottom: 40px
-  .content_right
+  .img_box
     position: relative
-  .image
-    position: absolute
-    top: -505px
+    top: -70px
     z-index: -1
   .button
     width: 250px
     height: 80px
 
 .box__first-step
-  .content
-    margin: 70px 0 0
-  .content_left
-    margin-right: 100px
-  .content_right
-    width: 600px
   .image
     margin-top: 170px
-  .title
-    margin-bottom: 40px
-  .text
-    width: 460px
 
 .box__second-step
   position: relative
-  .content
-    margin: 215px 0 240px
-  .content_left
-    width: 460px
-    margin-right: 100px
-  .content_right
-    position: relative
   .image
-    position: absolute
-    top: -410px
+    position: relative
+    top: -70px
     z-index: -1
 
 .box__third-step
   position: relative
   .content_left
-    margin: 117px 155px 117px 0
-  .text
-    width: 500px
+    margin: 117px 100px 117px 0
 
 .box__constructor
   position: relative
@@ -235,11 +215,6 @@ a
     display: flex
     flex-direction: row
     align-items: center
-  .title
-    margin-bottom: 40px
-    text-align: center
-  .text
-    text-align: center
     
   .img_container
     position: relative
@@ -280,14 +255,11 @@ a
     -webkit-align-items: center
     -ms-flex-align: center
     align-items: center
-  .text_gray
+  .text_color
     line-height: 19px
     text-align: center
 
-@media (max-width: 1850px)
-  .circle-8, .circle-7
-    display: none
 
 @media (max-width: 1550px)
-  .circle-1, .circle-2, .circle-9, .circle-11
+  .circle-1, .circle-6, .circle-4, .circle-5, img.circle-7
     display: none
